--- a/golang/并发编程/并发安全和数据竞争.md
+++ b/golang/并发编程/并发安全和数据竞争.md
@@ -3,45 +3,1276 @@
 ## 📚 学习目标
 理解并发编程中的安全问题，学会识别和避免数据竞争，编写线程安全的Go程序。
 
-## 🎯 主要内容
+---
 
-### 1. 数据竞争概念
-- 什么是数据竞争
-- 竞争条件识别
-- 内存可见性问题
-- Happens-before关系
+## 1. 数据竞争概念
 
-### 2. 竞争检测工具
-- Go race detector
-- 静态分析工具
-- 动态检测方法
-- 性能影响评估
+### 1.1 什么是数据竞争
+数据竞争是指两个或多个goroutine同时访问同一块内存，并且至少有一个goroutine执行写操作时，由于缺乏同步机制而导致的不确定行为。
 
-### 3. 并发安全策略
-- 不可变数据设计
-- 数据隔离
-- 锁策略选择
-- 无锁设计
+```go
+package main
 
-### 4. 常见并发问题
-- 死锁问题
-- 活锁问题
-- 饥饿问题
-- ABA问题
+import (
+    "fmt"
+    "sync"
+)
 
-### 5. 安全编程实践
-- 代码审查清单
-- 测试策略
-- 监控和诊断
-- 性能优化
+func main() {
+    counter := 0
+    var wg sync.WaitGroup
+    
+    // 启动1000个goroutine
+    for i := 0; i < 1000; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            counter++ // 这里存在数据竞争
+        }()
+    }
+    
+    wg.Wait()
+    fmt.Println("最终计数:", counter) // 结果不确定，小于1000
+}
+```
 
-## 🛠️ 实践项目
-- 并发安全库设计
-- 竞争检测工具
-- 性能基准测试
+### 1.2 竞争条件的形式
+1. **读-写竞争**：一个goroutine读取变量，另一个同时写入
+2. **写-写竞争**：多个goroutine同时写入同一变量
+3. **未初始化的内存访问**：访问尚未初始化的内存
 
-## 📖 相关资源
-- [Go Race Detector](https://golang.org/doc/articles/race_detector.html)
-- [Go Memory Model](https://golang.org/ref/mem)
+### 1.3 内存可见性问题
+内存可见性是指一个goroutine对共享变量的修改何时对其他goroutine可见。
 
-*详细内容正在编写中...*
+```go
+package main
+
+import (
+    "fmt"
+    "time"
+)
+
+func main() {
+    done := false
+    
+    // 启动一个工作goroutine
+    go func() {
+        time.Sleep(100 * time.Millisecond)
+        done = true // 可能对主goroutine不可见
+    }()
+    
+    // 主goroutine检查done标志
+    for !done {
+        // 忙等待，可能永远不会退出
+        // 因为主goroutine可能永远看不到done的更新
+    }
+    
+    fmt.Println("工作完成")
+}
+```
+
+### 1.4 Happens-before关系
+Happens-before是一种确保内存操作顺序的关系，Go的内存模型定义了几种建立happens-before关系的方式：
+
+1. **初始化**：包的init函数在main函数之前执行
+2. **goroutine创建**：go语句happens-before其创建的goroutine的执行
+3. **goroutine退出**：goroutine的退出不保证happens-before任何事件
+4. **channel通信**：channel发送happens-before对应的接收完成
+5. **锁**：Unlock happens-before之后对同一个互斥锁的Lock
+6. **Once**：once.Do(f)中的f的返回happens-before任何其他once.Do(f)的返回
+
+---
+
+## 2. 检测数据竞争
+
+### 2.1 使用Go Race Detector
+Go内置了一个数据竞争检测器，可以在编译、测试或运行时启用：
+
+```bash
+# 运行时启用race detector
+go run -race main.go
+
+# 测试时启用race detector
+go test -race ./...
+
+# 编译时启用race detector
+go build -race main.go
+```
+
+在数据竞争发生时，Race Detector会输出类似以下的报告：
+
+```
+==================
+WARNING: DATA RACE
+Read at 0x00c0000b4010 by goroutine 7:
+  main.main.func1()
+      /path/to/file.go:12 +0x44
+
+Previous write at 0x00c0000b4010 by goroutine 6:
+  main.main.func1()
+      /path/to/file.go:12 +0x44
+
+Goroutine 7 (running) created at:
+  main.main()
+      /path/to/file.go:11 +0xc4
+
+Goroutine 6 (finished) created at:
+  main.main()
+      /path/to/file.go:11 +0xc4
+==================
+```
+
+### 2.2 Race Detector工作原理
+Race Detector基于ThreadSanitizer实现，通过以下方式工作：
+1. 跟踪程序执行中的所有内存访问
+2. 监控所有同步事件（如互斥锁操作、channel通信）
+3. 检测违反happens-before关系的内存访问
+4. 产生违反情况的详细报告
+
+### 2.3 静态分析工具
+除了Race Detector，还有一些静态分析工具可以帮助检测潜在的并发问题：
+
+- **go vet**：Go内置的静态分析工具
+- **golangci-lint**：集成了多种linter的工具
+- **staticcheck**：高级静态分析工具
+
+```bash
+# 使用go vet检查
+go vet ./...
+
+# 使用golangci-lint
+golangci-lint run
+```
+
+### 2.4 Race Detector的局限性
+Race Detector并非万能：
+1. 仅能检测到执行过程中实际发生的数据竞争
+2. 增加程序的内存使用（5-10倍）和执行时间（2-20倍）
+3. 不能检测所有类型的并发问题（如死锁）
+
+---
+
+## 3. 避免数据竞争的策略
+
+### 3.1 使用互斥锁
+互斥锁（Mutex）是避免数据竞争最直接的方法：
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+func main() {
+    counter := 0
+    var mu sync.Mutex
+    var wg sync.WaitGroup
+    
+    for i := 0; i < 1000; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            
+            mu.Lock()
+            counter++ // 安全访问
+            mu.Unlock()
+        }()
+    }
+    
+    wg.Wait()
+    fmt.Println("最终计数:", counter) // 总是1000
+}
+```
+
+### 3.2 使用读写锁
+当读操作远多于写操作时，读写锁更高效：
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+func main() {
+    var data map[string]string = make(map[string]string)
+    var rwmu sync.RWMutex
+    var wg sync.WaitGroup
+    
+    // 写操作
+    for i := 0; i < 10; i++ {
+        wg.Add(1)
+        go func(i int) {
+            defer wg.Done()
+            
+            rwmu.Lock() // 独占锁
+            data[fmt.Sprintf("key-%d", i)] = fmt.Sprintf("value-%d", i)
+            rwmu.Unlock()
+        }(i)
+    }
+    
+    // 读操作
+    for i := 0; i < 100; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            
+            rwmu.RLock() // 共享锁
+            for k, v := range data {
+                _ = k
+                _ = v
+            }
+            rwmu.RUnlock()
+        }()
+    }
+    
+    wg.Wait()
+    
+    rwmu.RLock()
+    fmt.Println("数据项数:", len(data))
+    rwmu.RUnlock()
+}
+```
+
+### 3.3 使用原子操作
+对于简单的计数器等操作，可以使用原子操作：
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "sync/atomic"
+)
+
+func main() {
+    var counter int64
+    var wg sync.WaitGroup
+    
+    for i := 0; i < 1000; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            
+            atomic.AddInt64(&counter, 1) // 原子递增
+        }()
+    }
+    
+    wg.Wait()
+    
+    fmt.Println("最终计数:", atomic.LoadInt64(&counter)) // 总是1000
+}
+```
+
+### 3.4 使用Channel通信
+遵循"通过通信共享内存，而不是通过共享内存通信"的原则：
+
+```go
+package main
+
+import (
+    "fmt"
+)
+
+func worker(id int, jobs <-chan int, results chan<- int) {
+    for job := range jobs {
+        // 处理任务
+        result := job * 2
+        results <- result
+    }
+}
+
+func main() {
+    jobs := make(chan int, 100)
+    results := make(chan int, 100)
+    
+    // 启动3个worker
+    for w := 1; w <= 3; w++ {
+        go worker(w, jobs, results)
+    }
+    
+    // 发送任务
+    for j := 1; j <= 9; j++ {
+        jobs <- j
+    }
+    close(jobs)
+    
+    // 收集结果
+    for a := 1; a <= 9; a++ {
+        <-results
+    }
+}
+```
+
+### 3.5 不可变数据
+使用不可变数据可以避免数据竞争：
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+// 不可变结构
+type ImmutableData struct {
+    values []int
+}
+
+// 创建新的不可变实例
+func NewImmutableData(values []int) *ImmutableData {
+    copied := make([]int, len(values))
+    copy(copied, values)
+    return &ImmutableData{values: copied}
+}
+
+// 返回数值拷贝
+func (d *ImmutableData) Get(index int) int {
+    if index < 0 || index >= len(d.values) {
+        return 0
+    }
+    return d.values[index]
+}
+
+// 返回新的修改后的实例
+func (d *ImmutableData) Set(index int, value int) *ImmutableData {
+    if index < 0 || index >= len(d.values) {
+        return d
+    }
+    
+    copied := make([]int, len(d.values))
+    copy(copied, d.values)
+    copied[index] = value
+    
+    return &ImmutableData{values: copied}
+}
+
+func main() {
+    data := NewImmutableData([]int{1, 2, 3, 4, 5})
+    
+    var wg sync.WaitGroup
+    
+    // 读取不需要同步
+    for i := 0; i < 10; i++ {
+        wg.Add(1)
+        go func(i int) {
+            defer wg.Done()
+            value := data.Get(i % 5)
+            fmt.Printf("读取索引 %d: %d\n", i%5, value)
+        }(i)
+    }
+    
+    // 修改返回新实例，不改变原始数据
+    newData := data.Set(0, 100)
+    fmt.Println("原始data[0]:", data.Get(0))
+    fmt.Println("新data[0]:", newData.Get(0))
+    
+    wg.Wait()
+}
+```
+
+---
+
+## 4. 常见并发问题
+
+### 4.1 死锁
+死锁是指两个或多个goroutine互相等待对方持有的锁，导致程序永远无法继续执行。
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "time"
+)
+
+func main() {
+    var mu1, mu2 sync.Mutex
+    
+    // goroutine 1
+    go func() {
+        mu1.Lock()
+        fmt.Println("goroutine 1: 获取了mu1")
+        time.Sleep(time.Second) // 故意延迟，增加死锁可能性
+        
+        fmt.Println("goroutine 1: 尝试获取mu2")
+        mu2.Lock() // 可能死锁
+        defer mu2.Unlock()
+        
+        defer mu1.Unlock()
+        fmt.Println("goroutine 1: 完成")
+    }()
+    
+    // goroutine 2
+    go func() {
+        mu2.Lock()
+        fmt.Println("goroutine 2: 获取了mu2")
+        time.Sleep(time.Second) // 故意延迟，增加死锁可能性
+        
+        fmt.Println("goroutine 2: 尝试获取mu1")
+        mu1.Lock() // 可能死锁
+        defer mu1.Unlock()
+        
+        defer mu2.Unlock()
+        fmt.Println("goroutine 2: 完成")
+    }()
+    
+    time.Sleep(3 * time.Second)
+    fmt.Println("程序退出")
+}
+```
+
+避免死锁的策略：
+1. 按固定顺序获取锁
+2. 使用带超时的锁获取
+3. 使用tryLock模式
+4. 使用通道替代锁
+
+### 4.2 活锁
+活锁是指程序看起来在执行，但实际上没有进展。
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "sync/atomic"
+    "time"
+)
+
+func main() {
+    var wg sync.WaitGroup
+    var resource int32 = 0
+    var leftCount, rightCount int32
+    
+    // 左侧goroutine
+    wg.Add(1)
+    go func() {
+        defer wg.Done()
+        for i := 0; i < 10; i++ {
+            for {
+                // 检查资源是否可用
+                if atomic.CompareAndSwapInt32(&resource, 0, 1) {
+                    // 使用资源
+                    atomic.AddInt32(&leftCount, 1)
+                    time.Sleep(time.Millisecond)
+                    
+                    // 释放资源
+                    atomic.StoreInt32(&resource, 0)
+                    time.Sleep(time.Millisecond) // 礼貌性地让出资源
+                    break
+                }
+                
+                // 如果资源不可用，礼貌性地等待
+                fmt.Println("左侧等待...")
+                time.Sleep(time.Millisecond)
+            }
+        }
+    }()
+    
+    // 右侧goroutine
+    wg.Add(1)
+    go func() {
+        defer wg.Done()
+        for i := 0; i < 10; i++ {
+            for {
+                // 检查资源是否可用
+                if atomic.CompareAndSwapInt32(&resource, 0, 2) {
+                    // 使用资源
+                    atomic.AddInt32(&rightCount, 1)
+                    time.Sleep(time.Millisecond)
+                    
+                    // 释放资源
+                    atomic.StoreInt32(&resource, 0)
+                    time.Sleep(time.Millisecond) // 礼貌性地让出资源
+                    break
+                }
+                
+                // 如果资源不可用，礼貌性地等待
+                fmt.Println("右侧等待...")
+                time.Sleep(time.Millisecond)
+            }
+        }
+    }()
+    
+    wg.Wait()
+    fmt.Printf("左侧: %d, 右侧: %d\n", leftCount, rightCount)
+}
+```
+
+避免活锁的策略：
+1. 引入随机延迟
+2. 退避算法
+3. 优先级机制
+
+### 4.3 饥饿
+饥饿是指某些goroutine无法获得所需资源，导致无法取得进展。
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "time"
+)
+
+func main() {
+    var mu sync.Mutex
+    var wg sync.WaitGroup
+    const workers = 10
+    counts := make([]int, workers)
+    
+    for i := 0; i < workers; i++ {
+        wg.Add(1)
+        go func(id int) {
+            defer wg.Done()
+            
+            for j := 0; j < 100; j++ {
+                // 低优先级工作者，大部分时间在等待
+                if id > 0 {
+                    time.Sleep(time.Millisecond)
+                }
+                
+                mu.Lock()
+                counts[id]++
+                
+                // 高优先级工作者0占用锁较长时间
+                if id == 0 {
+                    time.Sleep(time.Millisecond)
+                }
+                
+                mu.Unlock()
+            }
+        }(i)
+    }
+    
+    wg.Wait()
+    
+    // 检查工作完成情况
+    fmt.Println("工作者完成计数:")
+    for i, count := range counts {
+        fmt.Printf("工作者 %d: %d\n", i, count)
+    }
+}
+```
+
+避免饥饿的策略：
+1. 公平锁
+2. 限制临界区时间
+3. 资源预留
+4. 优先级调整
+
+### 4.4 ABA问题
+ABA问题是指一个值从A变成B，又变回A，可能导致CAS操作无法检测到变化。
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "sync/atomic"
+    "time"
+)
+
+type Node struct {
+    value int
+    next  *Node
+}
+
+func main() {
+    // 初始链表: A -> B -> C
+    head := &Node{value: 1, next: &Node{value: 2, next: &Node{value: 3}}}
+    
+    var wg sync.WaitGroup
+    
+    // goroutine 1: 尝试删除节点A
+    wg.Add(1)
+    go func() {
+        defer wg.Done()
+        
+        // 保存初始头结点指针
+        oldHead := head
+        
+        // 模拟耗时操作
+        time.Sleep(100 * time.Millisecond)
+        
+        // 使用CAS尝试更新头结点为下一个节点
+        // 假设没有ABA问题，此操作应该成功
+        if atomic.CompareAndSwapPointer(
+            (*unsafe.Pointer)(unsafe.Pointer(&head)),
+            unsafe.Pointer(oldHead),
+            unsafe.Pointer(oldHead.next),
+        ) {
+            fmt.Println("goroutine 1: 成功删除节点A")
+        } else {
+            fmt.Println("goroutine 1: 操作失败，头结点已变化")
+        }
+    }()
+    
+    // goroutine 2: 删除A，然后添加新的A
+    wg.Add(1)
+    go func() {
+        defer wg.Done()
+        
+        // 删除节点A
+        oldHead := head
+        head = oldHead.next
+        fmt.Println("goroutine 2: 删除了节点A")
+        
+        // 删除节点B
+        nodeB := head
+        head = nodeB.next
+        fmt.Println("goroutine 2: 删除了节点B")
+        
+        // 添加新节点A'
+        newNode := &Node{value: 1}
+        newNode.next = head
+        head = newNode
+        fmt.Println("goroutine 2: 添加了新节点A'")
+    }()
+    
+    wg.Wait()
+    
+    // 打印最终链表
+    fmt.Println("最终链表:")
+    current := head
+    for current != nil {
+        fmt.Printf("%d -> ", current.value)
+        current = current.next
+    }
+    fmt.Println("nil")
+}
+```
+
+避免ABA问题的策略：
+1. 使用版本号或时间戳
+2. 内存屏障
+3. 双重检查
+
+---
+
+## 5. 并发安全设计
+
+### 5.1 线程安全的数据结构
+设计并发安全的数据结构需要考虑：
+1. 访问控制：通过锁或通道控制访问
+2. 内部同步：所有操作内部保证同步
+3. 不变量维护：保持数据结构的一致性
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+// 线程安全的队列
+type ConcurrentQueue struct {
+    data []interface{}
+    mu   sync.Mutex
+}
+
+// 创建新队列
+func NewConcurrentQueue() *ConcurrentQueue {
+    return &ConcurrentQueue{
+        data: make([]interface{}, 0),
+    }
+}
+
+// 入队
+func (q *ConcurrentQueue) Enqueue(item interface{}) {
+    q.mu.Lock()
+    defer q.mu.Unlock()
+    
+    q.data = append(q.data, item)
+}
+
+// 出队
+func (q *ConcurrentQueue) Dequeue() (interface{}, bool) {
+    q.mu.Lock()
+    defer q.mu.Unlock()
+    
+    if len(q.data) == 0 {
+        return nil, false
+    }
+    
+    item := q.data[0]
+    q.data = q.data[1:]
+    return item, true
+}
+
+// 查看队首元素
+func (q *ConcurrentQueue) Peek() (interface{}, bool) {
+    q.mu.Lock()
+    defer q.mu.Unlock()
+    
+    if len(q.data) == 0 {
+        return nil, false
+    }
+    
+    return q.data[0], true
+}
+
+// 获取队列长度
+func (q *ConcurrentQueue) Size() int {
+    q.mu.Lock()
+    defer q.mu.Unlock()
+    
+    return len(q.data)
+}
+
+func main() {
+    queue := NewConcurrentQueue()
+    var wg sync.WaitGroup
+    
+    // 并发入队
+    for i := 0; i < 10; i++ {
+        wg.Add(1)
+        go func(val int) {
+            defer wg.Done()
+            queue.Enqueue(val)
+            fmt.Printf("入队: %d\n", val)
+        }(i)
+    }
+    
+    // 并发出队
+    for i := 0; i < 5; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            if val, ok := queue.Dequeue(); ok {
+                fmt.Printf("出队: %v\n", val)
+            }
+        }()
+    }
+    
+    wg.Wait()
+    fmt.Printf("最终队列大小: %d\n", queue.Size())
+}
+```
+
+### 5.2 线程封闭
+线程封闭是指确保数据只被一个goroutine访问，从而避免同步：
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+func main() {
+    // 每个goroutine拥有自己的计数器
+    var wg sync.WaitGroup
+    
+    for i := 0; i < 5; i++ {
+        wg.Add(1)
+        go func(id int) {
+            defer wg.Done()
+            
+            // 局部变量，只在此goroutine中访问
+            localCounter := 0
+            
+            for j := 0; j < 1000; j++ {
+                localCounter++ // 安全，不需要同步
+            }
+            
+            fmt.Printf("goroutine %d: 计数 = %d\n", id, localCounter)
+        }(i)
+    }
+    
+    wg.Wait()
+}
+```
+
+### 5.3 并发安全原则
+编写并发安全代码的关键原则：
+
+1. **最小化共享**：尽量减少goroutine之间共享的数据。
+2. **不可变数据**：优先使用不可变数据结构。
+3. **明确所有权**：清晰定义数据的所有权和访问规则。
+4. **拷贝而非共享**：当数据量不大时，考虑使用拷贝。
+5. **文档化**：明确记录并发访问的假设和规则。
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+// SafeCounter是一个线程安全的计数器
+type SafeCounter struct {
+    mu    sync.Mutex
+    value int
+}
+
+// Inc方法安全地增加计数器值
+func (c *SafeCounter) Inc() {
+    c.mu.Lock()
+    defer c.mu.Unlock()
+    c.value++
+}
+
+// Value方法返回计数器当前值
+func (c *SafeCounter) Value() int {
+    c.mu.Lock()
+    defer c.mu.Unlock()
+    return c.value
+}
+
+func main() {
+    counter := SafeCounter{}
+    var wg sync.WaitGroup
+    
+    // 并发递增
+    for i := 0; i < 1000; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            counter.Inc() // 线程安全
+        }()
+    }
+    
+    wg.Wait()
+    fmt.Println("计数器最终值:", counter.Value())
+}
+```
+
+### 5.4 并发容器
+Go提供了一些内置的并发安全容器：
+
+1. **sync.Map**：适用于读多写少的场景，内部优化了读锁开销。
+2. **channels**：可以用作队列、信号量等并发原语。
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+func main() {
+    // 使用sync.Map
+    var m sync.Map
+    var wg sync.WaitGroup
+    
+    // 并发写入
+    for i := 0; i < 100; i++ {
+        wg.Add(1)
+        go func(i int) {
+            defer wg.Done()
+            key := fmt.Sprintf("key-%d", i)
+            m.Store(key, i)
+        }(i)
+    }
+    
+    // 并发读取
+    for i := 0; i < 100; i++ {
+        wg.Add(1)
+        go func(i int) {
+            defer wg.Done()
+            key := fmt.Sprintf("key-%d", i)
+            if val, ok := m.Load(key); ok {
+                _ = val
+                // fmt.Printf("读取 %s: %v\n", key, val)
+            }
+        }(i)
+    }
+    
+    wg.Wait()
+    
+    // 统计存储的键值对数量
+    count := 0
+    m.Range(func(key, value interface{}) bool {
+        count++
+        return true
+    })
+    
+    fmt.Println("存储的键值对数量:", count)
+}
+```
+
+---
+
+## 6. 并发性能优化
+
+### 6.1 减少锁粒度
+锁粒度越细，并发性能越好：
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "time"
+)
+
+// 粗粒度锁定
+type CoarseMap struct {
+    mu   sync.Mutex
+    data map[string]string
+}
+
+func (m *CoarseMap) Get(key string) (string, bool) {
+    m.mu.Lock()
+    defer m.mu.Unlock()
+    val, ok := m.data[key]
+    return val, ok
+}
+
+func (m *CoarseMap) Set(key, val string) {
+    m.mu.Lock()
+    defer m.mu.Unlock()
+    m.data[key] = val
+}
+
+// 细粒度锁定
+type FineMap struct {
+    shards    []*mapShard
+    shardMask int
+}
+
+type mapShard struct {
+    mu   sync.Mutex
+    data map[string]string
+}
+
+func NewFineMap(shardCount int) *FineMap {
+    shards := make([]*mapShard, shardCount)
+    for i := 0; i < shardCount; i++ {
+        shards[i] = &mapShard{
+            data: make(map[string]string),
+        }
+    }
+    return &FineMap{
+        shards:    shards,
+        shardMask: shardCount - 1,
+    }
+}
+
+func (m *FineMap) getShard(key string) *mapShard {
+    // 简单哈希算法，根据key的第一个字符选择分片
+    hash := int(key[0])
+    return m.shards[hash&m.shardMask]
+}
+
+func (m *FineMap) Get(key string) (string, bool) {
+    shard := m.getShard(key)
+    shard.mu.Lock()
+    defer shard.mu.Unlock()
+    val, ok := shard.data[key]
+    return val, ok
+}
+
+func (m *FineMap) Set(key, val string) {
+    shard := m.getShard(key)
+    shard.mu.Lock()
+    defer shard.mu.Unlock()
+    shard.data[key] = val
+}
+
+func main() {
+    // 测试参数
+    const numGoroutines = 100
+    const numOperations = 1000
+    
+    // 初始化两种Map
+    coarseMap := &CoarseMap{data: make(map[string]string)}
+    fineMap := NewFineMap(16) // 16个分片
+    
+    // 测试粗粒度锁Map
+    startCoarse := time.Now()
+    var wg sync.WaitGroup
+    
+    for i := 0; i < numGoroutines; i++ {
+        wg.Add(1)
+        go func(id int) {
+            defer wg.Done()
+            
+            for j := 0; j < numOperations; j++ {
+                key := fmt.Sprintf("key-%d-%d", id, j)
+                value := fmt.Sprintf("value-%d-%d", id, j)
+                
+                coarseMap.Set(key, value)
+                _, _ = coarseMap.Get(key)
+            }
+        }(i)
+    }
+    
+    wg.Wait()
+    coarseTime := time.Since(startCoarse)
+    fmt.Printf("粗粒度锁Map耗时: %v\n", coarseTime)
+    
+    // 测试细粒度锁Map
+    startFine := time.Now()
+    
+    for i := 0; i < numGoroutines; i++ {
+        wg.Add(1)
+        go func(id int) {
+            defer wg.Done()
+            
+            for j := 0; j < numOperations; j++ {
+                key := fmt.Sprintf("key-%d-%d", id, j)
+                value := fmt.Sprintf("value-%d-%d", id, j)
+                
+                fineMap.Set(key, value)
+                _, _ = fineMap.Get(key)
+            }
+        }(i)
+    }
+    
+    wg.Wait()
+    fineTime := time.Since(startFine)
+    fmt.Printf("细粒度锁Map耗时: %v\n", fineTime)
+    fmt.Printf("性能提升: %.2f倍\n", float64(coarseTime)/float64(fineTime))
+}
+```
+
+### 6.2 无锁编程
+某些场景下，可以使用无锁技术提高性能：
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "sync/atomic"
+)
+
+// 使用原子操作实现简单计数器
+type AtomicCounter struct {
+    value int64
+}
+
+func (c *AtomicCounter) Inc() {
+    atomic.AddInt64(&c.value, 1)
+}
+
+func (c *AtomicCounter) Value() int64 {
+    return atomic.LoadInt64(&c.value)
+}
+
+// 使用锁实现计数器
+type MutexCounter struct {
+    mu    sync.Mutex
+    value int64
+}
+
+func (c *MutexCounter) Inc() {
+    c.mu.Lock()
+    c.value++
+    c.mu.Unlock()
+}
+
+func (c *MutexCounter) Value() int64 {
+    c.mu.Lock()
+    defer c.mu.Unlock()
+    return c.value
+}
+
+func main() {
+    const numGoroutines = 1000
+    const numIncrements = 1000
+    
+    // 测试原子计数器
+    atomicCounter := AtomicCounter{}
+    var wg sync.WaitGroup
+    
+    start := time.Now()
+    
+    for i := 0; i < numGoroutines; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            
+            for j := 0; j < numIncrements; j++ {
+                atomicCounter.Inc()
+            }
+        }()
+    }
+    
+    wg.Wait()
+    atomicTime := time.Since(start)
+    
+    fmt.Printf("原子计数器最终值: %d, 耗时: %v\n",
+        atomicCounter.Value(), atomicTime)
+    
+    // 测试锁计数器
+    mutexCounter := MutexCounter{}
+    
+    start = time.Now()
+    
+    for i := 0; i < numGoroutines; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            
+            for j := 0; j < numIncrements; j++ {
+                mutexCounter.Inc()
+            }
+        }()
+    }
+    
+    wg.Wait()
+    mutexTime := time.Since(start)
+    
+    fmt.Printf("锁计数器最终值: %d, 耗时: %v\n",
+        mutexCounter.Value(), mutexTime)
+    
+    fmt.Printf("性能提升: %.2f倍\n", float64(mutexTime)/float64(atomicTime))
+}
+```
+
+### 6.3 减少共享状态
+通过避免共享状态来提高并发性能：
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "time"
+)
+
+// 基于共享状态的设计
+func sharedStateDesign() time.Duration {
+    start := time.Now()
+    
+    const numWorkers = 100
+    const numTasks = 1000
+    
+    results := make([]int, numTasks)
+    var mu sync.Mutex
+    var wg sync.WaitGroup
+    
+    // 分配任务
+    tasks := make(chan int, numTasks)
+    for i := 0; i < numTasks; i++ {
+        tasks <- i
+    }
+    close(tasks)
+    
+    // 启动工作者
+    for i := 0; i < numWorkers; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            
+            for task := range tasks {
+                // 处理任务
+                result := task * 2
+                
+                // 更新共享状态
+                mu.Lock()
+                results[task] = result
+                mu.Unlock()
+            }
+        }()
+    }
+    
+    wg.Wait()
+    return time.Since(start)
+}
+
+// 基于消息传递的设计
+func messagePassingDesign() time.Duration {
+    start := time.Now()
+    
+    const numWorkers = 100
+    const numTasks = 1000
+    
+    // 分配任务
+    tasks := make(chan int, numTasks)
+    for i := 0; i < numTasks; i++ {
+        tasks <- i
+    }
+    close(tasks)
+    
+    // 收集结果
+    type result struct {
+        taskID int
+        value  int
+    }
+    
+    results := make(chan result, numTasks)
+    
+    // 启动工作者
+    var wg sync.WaitGroup
+    for i := 0; i < numWorkers; i++ {
+        wg.Add(1)
+        go func() {
+            defer wg.Done()
+            
+            for task := range tasks {
+                // 处理任务
+                value := task * 2
+                
+                // 发送结果
+                results <- result{taskID: task, value: value}
+            }
+        }()
+    }
+    
+    // 关闭结果通道
+    go func() {
+        wg.Wait()
+        close(results)
+    }()
+    
+    // 收集结果
+    finalResults := make([]int, numTasks)
+    for r := range results {
+        finalResults[r.taskID] = r.value
+    }
+    
+    return time.Since(start)
+}
+
+func main() {
+    // 热身
+    sharedStateDesign()
+    messagePassingDesign()
+    
+    // 实际测量
+    sharedTime := sharedStateDesign()
+    fmt.Printf("共享状态设计耗时: %v\n", sharedTime)
+    
+    messageTime := messagePassingDesign()
+    fmt.Printf("消息传递设计耗时: %v\n", messageTime)
+    
+    speedup := float64(sharedTime) / float64(messageTime)
+    fmt.Printf("性能提升: %.2f倍\n", speedup)
+}
+```
+
+---
+
+## 7. 学习检查点
+
+- [ ] 理解数据竞争的概念和检测方法
+- [ ] 掌握Go Race Detector的使用
+- [ ] 能使用不同的同步机制避免数据竞争
+- [ ] 理解并发问题：死锁、活锁、饥饿和ABA问题
+- [ ] 能设计并发安全的数据结构
+- [ ] 掌握并发性能优化技术
+
+---
+
+数据竞争是并发编程中最常见也最难调试的问题之一。通过理解Go的内存模型，使用适当的同步机制，设计良好的并发模式，可以编写既正确又高效的并发程序。记住，对于并发程序，正确性是首要目标，性能是次要考虑。
